--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
   <!-- HEADER ====================================================== -->
-  <header id="header">
+  <header id="site-header">
     <div class="container">
       <div class="header-wrap row between align-center">
         <div class="logo-wrap">
@@ -31,7 +31,7 @@
         </div>
         <nav class="nav-wrap">
           <ul class="nav-list row">
-            <li class="nav-list-item">
+            <li class="nav-list-item active">
               <a href="#">Home</a>
             </li>
             <li class="nav-list-item">
@@ -96,7 +96,7 @@
             To Advance Your <br> 
             Career Path.
           </h2>
-          <p class="paragraph">
+          <p class="hero-p paragraph">
             We have something big for you who want to level up!
           </p>
           <form>
@@ -124,7 +124,6 @@
 
   <!-- MAIN ====================================================== -->
   <main>
-
     <!-- MENTOR SECTION ====================================================== -->
     <section id="mentor">
       <div class="container">
@@ -200,7 +199,7 @@
                 you start designing with Figma ...
               </p>
               <div class="tutor-text tutor-text2">
-                <h4 class="tutor-name">Joey Piere</h4>
+                <h4 class="tutor-name">Araya Sheila</h4>
                 <p class="prof">Mentor</p>
               </div>
               <div class="course-card-btn-wrap">
@@ -220,7 +219,7 @@
                 understand tutorials with lots of ...
               </p>
               <div class="tutor-text tutor-text3">
-                <h4 class="tutor-name">Joey Piere</h4>
+                <h4 class="tutor-name">Ellisa Ruth</h4>
                 <p class="prof">Mentor</p>
               </div>
               <div class="course-card-btn-wrap">
@@ -240,7 +239,7 @@
                 next level, advanced Android app ...
               </p>
               <div class="tutor-text tutor-text4">
-                <h4 class="tutor-name">Joey Piere</h4>
+                <h4 class="tutor-name">Wendy Troye</h4>
                 <p class="prof">Mentor</p>
               </div>
               <div class="course-card-btn-wrap">
@@ -249,7 +248,7 @@
             </div>
           </div>
           <div class="class-btn-wrap">
-            <a href="#" class="classes-btn">Show All Classes</a>
+            <a href="#" class="classes-btn btn">Show All Classes</a>
           </div>
         </div>
       </div>
@@ -286,13 +285,134 @@
         <div class="pricing-wrap center">
           <h2 class="pricing-title title">Course Pricing</h2>
           <p class="price-p paragraph">Choose pricing that suits to your need.</p>
+          <div class="pricing-cards row between">
+            <div class="pricing-card">
+              <div class="pricing-card-text card1">
+                <h3 class="pricing-card-title">Free</h3>
+                <p class="price"><sup>$</sup>0<sub> / month</sub></p>
+              </div>
+              <ul class="pricing-card-inner-list">
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Free e-book for every class</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Materials update every day</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Free download material videos</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Unlock 5 material videos</li>
+              </ul>
+              <a href="#" class="pricing-card-btn btn">Your Current Package</a>
+            </div>
+            <div class="pricing-card">
+              <div class="pricing-card-text card2">
+                <h3 class="pricing-card-title">Express</h3>
+                <p class="price"><sup>$</sup>75<sub> / month</sub></p>
+              </div>
+              <ul class="pricing-card-inner-list">
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Free e-book for every class</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Materials update every day</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Free download material videos</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Meeting 2 times a week</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Unlock 15 material videos</li>
+              </ul>
+              <a href="#" class="pricing-card-btn btn">Your Current Package</a>
+            </div>
+            <div class="pricing-card">
+              <img src="img/pricing-discount.png" alt="image">
+              <span class="popular">popular</span>
+              <div class="pricing-card-text card3">
+                <h3 class="pricing-card-title">Premium</h3>
+                <p class="price"><sup>$</sup>115<sub> / month</sub></p>
+              </div>
+              <ul class="pricing-card-inner-list">
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Free e-book for every class</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Materials update every day</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Free download material videos</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Private chat with mentor</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Meeting 3 times a week</li>
+                <li class="pricing-card-list-item"><i class='bx bxs-circle'></i> Unlimited saved class</li>
+              </ul>
+              <a href="#" class="pricing-card-btn btn">Your Current Package</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- /PRICING SECTION ====================================================== -->
 
+    <!-- STORE SECTION ====================================================== -->
+    <section id="store">
+      <div class="container">
+        <div class="store-wrap row">
+          <div class="store-text">
+            <h2 class="store-title">Get Our Apps, Now!</h2>
+            <p class="paragraph">
+              Reach out our apps everywhere and everytime <br> 
+              with Sinauw Mobile Application.
+            </p>
+            <div class="store-links row align-center">
+              <a class="google-play" href="https://play.google.com/store"><img  src="img/playmarket.png" alt="image"></a>
+              <a class="appstore" href="https://www.apple.com/ru/app-store/"><img  src="img/appstore.png" alt="image"></a>
+            </div>
+          </div>
+          <div class="store-image">
+            <img src="img/store-img.png" alt="image">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /STORE SECTION ====================================================== -->
   </main>
   <!-- /MAIN ====================================================== -->
+
+  <!-- FOOTER ====================================================== -->
+  <footer id="site-footer">
+    <div class="container">
+      <div class="footer-columns-wrap row">
+        <div class="logo-column">
+          <img src="img/logo.png" alt="image">
+          <p class="footer-p">
+            Any feedback or questions? <br> 
+            Contact us on our social media
+          </p>
+          <ul class="footer-icons-links row">
+            <li class="icon-link"><a href="https://facebook.com" target="_blank"><i class='bx bxl-facebook'></i></a></i></li>
+            <li class="icon-link"><a href="https://twitter.com" target="_blank"><i class='bx bxl-twitter' ></i></a></li>
+            <li class="icon-link"><a href="https://instagram.com" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
+          </ul>
+        </div>
+        <div class="menu-column column">
+          <ul class="menu-links">
+            <li class="column-title">Menu</li>
+            <li class="link"><a href="#">Home</a></li>
+            <li class="link"><a href="#">Courses</a></li>
+            <li class="link"><a href="#">Webinar</a></li>
+          </ul>
+        </div>
+        <div class="services-column column">
+          <ul class="services-links">
+            <li class="column-title">services</li>
+            <li class="link"><a href="#">Materrial Update</a></li>
+            <li class="link"><a href="#">Trusted Mentor</a></li>
+            <li class="link"><a href="#">Free E-book</a></li>
+            <li class="link"><a href="#">Meeting</a></li>
+          </ul>
+        </div>
+        <div class="info-column column">
+          <ul class="info-links">
+            <li class="column-title">Further Information</li>
+            <li class="link"><a href="#">Term & Conditions</a></li>
+            <li class="link"><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="apps-column column">
+          <ul class="apps-links">
+            <li class="column-title">Apps Download</li>
+            <li class="link"><a href="#">Google Play Store</a></li>
+            <li class="link"><a href="#">App Store</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="copyright">Copyright &copy 2021 Sinauw. All Rights Reserved.</p>
+    </div>
+  </footer>
+  <!-- /FOOTER ====================================================== -->
 
 </body>
 </html>
